<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_iconLeft="@mipmap/login_phone_s"
        app:met_primaryColor="@color/defaultColorAccent"
        app:met_baseColor="@color/color_e6e6e6"
        app:met_textColor="@color/defaultColorAccent"
        app:met_underlineColor="@color/color_e6e6e6"
        app:met_textColorHint="@color/color_cccccc"
        app:met_clearButton="false"
        app:met_iconPadding="0dp"
        app:met_floatingLabelTextColor="@color/color_333333"
        app:met_floatingLabelAlwaysShown="true"
        android:maxLength="18"
        android:textSize="15sp"
        android:inputType="number"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_account"/>
    <FrameLayout
        android:layout_marginLeft="20dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/sms_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_iconLeft="@mipmap/login_yzm_s"
            app:met_primaryColor="@color/defaultColorAccent"
            app:met_baseColor="@color/color_e6e6e6"
            app:met_textColor="@color/defaultColorAccent"
            app:met_underlineColor="@color/color_e6e6e6"
            app:met_textColorHint="@color/color_cccccc"
            app:met_iconPadding="0dp"
            android:textSize="15sp"
            android:maxLength="10"
            android:hint="@string/hint_sms_code"
            android:inputType="number" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/selector_2da0f0_disabled_e6e6e6"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_10"
            android:textColor="@drawable/selector_2da0f0_disabled_e6e6e6_text"
            android:text="@string/text_get_sms_code"/>
    </FrameLayout>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_iconLeft="@mipmap/icon_password"
        app:met_primaryColor="@color/defaultColorAccent"
        app:met_baseColor="@color/color_e6e6e6"
        app:met_textColor="@color/defaultColorAccent"
        app:met_underlineColor="@color/color_e6e6e6"
        app:met_textColorHint="@color/color_cccccc"
        app:met_iconPadding="0dp"
        android:textSize="15sp"
        android:maxLength="18"
        android:inputType="textPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_password_new"/>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_iconLeft="@mipmap/icon_password"
        app:met_primaryColor="@color/defaultColorAccent"
        app:met_baseColor="@color/color_e6e6e6"
        app:met_textColor="@color/defaultColorAccent"
        app:met_underlineColor="@color/color_e6e6e6"
        app:met_textColorHint="@color/color_cccccc"
        app:met_iconPadding="0dp"
        android:textSize="15sp"
        android:maxLength="18"
        android:inputType="textPassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_confirm_password_new"/>
    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="@color/white"
        app:pb_textProgress="@string/text_please_wait"
        app:pb_cornerRadius="5dp"
        app:pb_colorNormal="@color/color_2da0f0"
        app:pb_colorPressed="@color/defaultColorAccent"
        android:text="@string/text_compile"/>
</LinearLayout>